# quickbrain

./: .gitignore  README.md  examples.ipynb  pyproject.toml
.github/workflows/: docs.yml
docs/: generate_api_docs.py  getting-started.ipynb  index.md  myst.yml
quickbrain/: __init__.py  _resources.py  plotting.py
quickbrain/resources/: __init__.py  curvature_side-left_res-1.txt  curvature_side-left_res-10.txt  curvature_side-left_res-2.txt  curvature_side-left_res-3.txt  curvature_side-left_res-4.txt  curvature_side-left_res-5.txt  curvature_side-left_res-6.txt  curvature_side-left_res-7.txt  curvature_side-left_res-8.txt  curvature_side-left_res-9.txt  curvature_side-right_res-1.txt  curvature_side-right_res-10.txt  curvature_side-right_res-2.txt  curvature_side-right_res-3.txt  curvature_side-right_res-4.txt  curvature_side-right_res-5.txt  curvature_side-right_res-6.txt  curvature_side-right_res-7.txt  curvature_side-right_res-8.txt  curvature_side-right_res-9.txt
resources/: curvature_res-1.txt  curvature_res-2.txt  curvature_res-3.txt  curvature_res-4.txt  full_brain.surf.gii  full_brain_left.surf.gii  full_brain_right.surf.gii
